--- a/docker/nginx-default.conf
+++ b/docker/nginx-default.conf
@@ -18,12 +18,12 @@ server {
                  image/x-icon image/x-win-bitmap text/css text/javascript text/plain text/xml;
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /ui;
         index  index.html index.htm;
     }
 
     location ~ assets\/.*\.(?:css|js|woff2?|svg|gif|map)$ {
-        root   /usr/share/nginx/html;
+        root   /ui;
         try_files $uri $uri/ /index.html;
         add_header Cache-Control "public, max-age=31536000, immutable";
         # access_log off;
